# fastapi-model-serving

./: .dockerignore  .env-example  .gitignore  Dockerfile  README.md  database.py  gcp-example-service-account.json  main.py  model.py  pyproject.toml  requirements.txt
.github/workflows/: build.yaml
app/: main.py
chart/: Chart.yaml  sentiment-helm-0.0.1.tgz  values.yaml
database/: __init__.py  database.py  database_setting.py  model.py
scripts/: create_env.sh
src/: loadtest.py  model.py  trainer.py
